--- a/Mango.Web/Views/Home/Index.cshtml
+++ b/Mango.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Mango.Web.Models.Dto;
+﻿@using Mango.Web.Models;
 @model IEnumerable<ProductDTO>
     <form>
         <div class="container row">
