--- a/Mango.Web/Views/Home/ProductDetails.cshtml
+++ b/Mango.Web/Views/Home/ProductDetails.cshtml
@@ -1,6 +1,7 @@
-﻿@using Mango.Web.Models.Dto;
+﻿@using Mango.Web.Models;
 @model ProductDTO
 <form method="post">
+    <input asp-for="ProductId" hidden/>
     <div class=" pt-4">
         <div class="card container" style="border:1px solid #808080;">
             <div class="card-header bg-dark text-light row" style="border-radius: 0px;">
